@@ -7,6 +7,7 @@ count source line and visualize (using R)
 
 chapter 11
  o implemented exercies 1-3 <2012-04-26, Thu>
+ o implemented exercies 4 <2012-04-27, Fri>
 
 chapter 10
  o implemented exercies 1-4 <2012-03-31, Sat>
